# social-tokens

./: package-lock.json  package.json
actions/: contentAccess.ts  createMint.ts  deleteFromInterest.ts  fetchAllContent.tsx  fetchFromPinata.ts  fetchInterested.ts  fetchParticularContent.ts  metadataToDb.ts  showInterestToDB.ts  uploadToPinata.ts
app/: Providers.tsx  layout.tsx  page.tsx
app/api/auth/[...nextauth]/: route.ts
app/authOptions/: auth.ts
app/components/: Landing.tsx
app/dashboard/: page.tsx
app/fanDashboard/: page.tsx
components/: Appbar.tsx  ContentCard.tsx  ContentGrid.tsx  CreateATADialogue.tsx  CreateToken.tsx  Landing.tsx  UserContentGrid.tsx  UserSideContentCard.tsx  WalletConnect.tsx
lib/: utils.ts
prisma/: schema.prisma
prisma/migrations/20241107155505_init/: migration.sql
prisma/migrations/20241121190113_added_uploaded_medata_table/: migration.sql
prisma/migrations/20241121190423_added_description/: migration.sql
prisma/migrations/20241123172124_added/: migration.sql
prisma/migrations/20241123193512_added/: migration.sql
prisma/migrations/20241123193609_removed/: migration.sql
prisma/migrations/20241126180723_interest/: migration.sql
smart_contract/example-hello-world/src/program-rust/: Cargo.toml
smart_contract/example-hello-world/src/program-rust/src/: lib.rs
