
[package]
name = "Social-Tokens-Smart-Contract"
version = "0.1.0"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"


[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.4.26"
spl-token = { version = "3.1.1", features=["no-entrypoint"] }


[dev-dependencies]
solana-program-test = "2.0.10"
solana-sdk = "2.0.10"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
